# contextkernel

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  db-findings.md  example-assumed.json  goals.md  goals_changes.md  plan.md  pyproject.toml  requirements.txt
app/: auth.py  config.py  db.py  main.py
app/kernel/: builders.py  connector.py  data_router.py  extractor.py  features.py  goals_config.py  models.py  presets.py  record_type_map.py  router.py  signal_map.py  signals_router.py  user_profile_stub.py
tests/: conftest.py  test_builders.py  test_endpoints.py  test_extractor.py  test_features.py  test_goals.py  test_models.py
